# OBPMark_rust

./: Cargo.toml  GPU4S_benchmarks.md  README.md
bare_metal/: Cargo.toml
bare_metal/.cargo/: config.toml
bare_metal/src/: assembly.rs  console.rs  main.rs  shared_matrix.rs
bare_metal/src/asm/: boot.s  boot_single_hart.s
bare_metal/src/benchmarks/: convolution.rs  matrix_multiplication.rs
bare_metal/src/lds/: metasat.lds  virt.lds
bare_metal/src/uart/: apbuart.rs  virt_uart.rs
benchmarks/: Cargo.toml  build.rs  run_benchmarks.py
benchmarks/reference_versions/: cpu_functions.c
benchmarks/src/: lib.rs
obpmark_library/: Cargo.toml
obpmark_library/src/: lib.rs  parallel_traits.rs  rayon_traits.rs
obpmark_library/src/matrix_1d/: mod.rs  parallel_implementations.rs  rayon_implementations.rs  sequential_implementations.rs
obpmark_library/src/matrix_2d/: mod.rs  parallel_implementations.rs  rayon_implementations.rs  sequential_implementations.rs
reference_algorithms/: Cargo.toml  README.md  build.rs
reference_algorithms/src/: cpu_functions.c  lib.rs
src/: 1.1-image.rs  GPU4S_benchmarks.md  benchmark_utils.rs  lib.rs  main.rs  matrix_1d.rs  matrix_2d.rs  matrix_multiplication_bench.md  matrix_ndarray.rs  notes.md  number_traits.rs  parallel_traits.rs  rayon_traits.rs  test.in
src/matrix_1d/: mod.rs  parallel_implementations.rs  rayon_implementations.rs  sequential_implementations.rs
src/matrix_2d/: mod.rs  parallel_implementations.rs  rayon_implementations.rs  sequential_implementations.rs
src/matrix_nalgebra/: mod.rs
tmp_src/: OBPMark_applications.md
