[package]
name = "obpmark_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
rand = "0.8.5"
ndarray = "0.15.6"
funty = "2.0.0"
num = "0.4.0"
num-traits = "0.2.14"

[features]
default = []

int = []
float = []
double = []

1d = []
2d = []
ndarray = []