[package]
name = "obpmark_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
rand = "0.8.5"
num-traits = "0.2.14"
half = {version = "2.2.1", features = ["num-traits"]}

[features]
default = []

int = []
float = []
double = []
half = []

1d = []
2d = []