[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
obpmark_library = { path = "../obpmark_library" }

[features]
default = []

int = []
float = []
double = []
half = []

1d = []
2d = []