[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
obpmark_library = { path = "../obpmark_library" }
reference_algorithms = { path = "../reference_algorithms" }

[features]
default = []

int = ["reference_algorithms/int"]
float = ["reference_algorithms/float"]
double = ["reference_algorithms/double"]
half = ["reference_algorithms/half"]

1d = []
2d = []