[package]
name = "reference_algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["std"]

# data types
float = []
double = []
int = []

# architecture specific
riscv_hard_float = []

# standard library, on by default
std = []

[build-dependencies]
cc = "1.0"